check userController